Challenge16/mongodb-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: aloussaief
spec:
  serviceName: "mongodb-service"
  replicas: 2
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:latest
          command:
            - "mongod"
            - "--replSet"
            - "$(MONGO_REPLICA_SET)"
            - "--bind_ip"
            - "0.0.0.0"
          ports:
            - containerPort: 27017
          resources:
            requests:
              cpu: "0.1"
              memory: "200Mi"
            limits:
              cpu: "0.3"  
              memory: "400Mi"  
          volumeMounts:
            - name: mongodb-data
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: mongodb-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 300Mi
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: aloussaief
spec:
  clusterIP: None 
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
