Challenge16/webdb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webdb
  namespace: aloussaief
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webdb
  template:
    metadata:
      labels:
        app: webdb
    spec:
      containers:
      - name: webdb
        image: achrefloussaief101/webdb:v3
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "0.1"
            memory: "200Mi"
          limits:
            cpu: "0.3"
            memory: "400Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: webdb-service
  namespace: aloussaief
spec:
  selector:
    app: webdb
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: ClusterIP
